updated flask api to work with linux in preperation for compiling to macos

--- a/config.json
+++ b/config.json
@@ -1,1 +1,4 @@
-{"destination_path": "C:\\Users\\tom_b\\Desktop\\Documents\\Python\\vcoding\\completed\\destination\\", "excel_path": "C:\\Users\\tom_b\\Desktop\\Documents\\Python\\vcoding\\completed\\"}
+{
+  "destination_path": "/home/tom/code/vcoding/files/completed/",
+  "excel_path": "/home/tom/code/vcoding/files/"
+}
