--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ xlrd = "*"
 pandas = "*"
 numpy = "*"
 flask-cors = "*"
+xlrd = "*"
+xlsxwriter = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
